[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
mongodb = "3.8"
tower-http = { version = "0.7", features = ["cors"] }
dotenvy = "0.15"
shared_logic = { path = "../shared_logic" }