[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
mongodb = "3.8"
tower-http = { version = "0.7", features = ["cors"] }
dotenvy = "0.15"
uuid = { version = "1.24", features = ["v7", "serde"] }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.11"
rand = "0.10"
hex = "0.4"
time = "0.3"

shared_logic = { path = "../shared_logic" }